[gd_scene load_steps=6 format=3 uid="uid://dxt8she2o5wr8"]

[ext_resource type="Script" uid="uid://blfshskb3wy1a" path="res://Scenes/Bullet/GravityBullet.gd" id="1_1beoe"]
[ext_resource type="Texture2D" uid="uid://7tv5genny6ov" path="res://graphics/items/ball_gun_bullet.png" id="2_fsfbb"]
[ext_resource type="Script" path="res://Scenes/Bullet/ColorRandomizer.gd" id="3_53m0d"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1beoe"]
friction = 0.0
bounce = 0.8

[sub_resource type="CircleShape2D" id="CircleShape2D_6dsri"]
radius = 15.0

[node name="GravityBullet" type="RigidBody2D"]
collision_layer = 16
collision_mask = 53
mass = 0.1
physics_material_override = SubResource("PhysicsMaterial_1beoe")
script = ExtResource("1_1beoe")
DAMAGE = 25
SPEED = 1000

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_fsfbb")
script = ExtResource("3_53m0d")
colors = Array[Color]([Color(0.835294, 0.427451, 0.392157, 1), Color(0.509804, 0.709804, 0.721569, 1), Color(0.996078, 0.588235, 0.733333, 1), Color(0.623529, 0.145098, 0.298039, 1), Color(0.592157, 0.717647, 0.572549, 1)])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6dsri")

[node name="DestroyTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
